Fixing alignment of messages count

--- a/src/app/components/main/navigation/navigation.responsive.scss
+++ b/src/app/components/main/navigation/navigation.responsive.scss
@@ -10,6 +10,9 @@
 				.logo-min {
 					display: none;
 				}
+				.messages-count {
+			    	top: 18px;
+				}
 			}
 		}
 	}
